--- a/front/css/footer-header.css
+++ b/front/css/footer-header.css
@@ -45,8 +45,6 @@ header .container, header .d-flex {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
-
-
 header h1 {
     font-size: 1.5rem;
     margin: 0;
@@ -62,7 +60,6 @@ header nav {
     padding: 0 1rem;
 }
 
-
 header nav a {
     flex: 1 1 0;
     max-width: 300px;
@@ -71,7 +68,7 @@ header nav a {
     padding: 14px 24px;
     font-size: 2.3rem;
     font-weight: 900;
-    font-family: 'Orbitron', sans-serif; /* police futuriste stylée */
+    font-family: 'Orbitron', sans-serif;
     font-style: italic;
     border: none;
     color: #e9ff08;
@@ -80,7 +77,6 @@ header nav a {
     transition: all 0.25s ease;
     text-decoration: none;
 }
-
 
 header nav a:hover {
     transform: scale(1.05);
@@ -106,43 +102,3 @@ footer h5, footer p {
     font-size: 1rem;
     text-shadow: 1px 1px 2px rgb(244, 208, 111);
 }
-
-
-#carouselPresentation {
-    max-width: 900px;
-    margin: 0 auto;
-    overflow: hidden;
-    border-radius: 16px;
-    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
-    position: relative;
-}
-
-.carousel-track {
-    display: flex;
-    transition: transform 2s ease-in-out;
-    width: 100%;
-    height: 100%;
-}
-
-
-.carousel-slide {
-    flex: 0 0 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f4d06f;
-    box-shadow: #ff8811;
-}
-
-
-.carousel-slide img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-
-
-
-
-
