--- a/front/css/carte.css
+++ b/front/css/carte.css
@@ -44,7 +44,13 @@
 
 #map {
     height: 500px;
+    width: 100%;
+    min-height: 400px;
     border-radius: 16px;
     box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25);
+    display: block;
     overflow: hidden;
 }
+
+
+
