--- a/front/css/connexion.css
+++ b/front/css/connexion.css
@@ -28,3 +28,26 @@
 .btn-primary:hover {
     background-color: #e67610 !important;
 }
+
+@media screen and (max-width: 576px) {
+    .login-box {
+        padding: 1.2rem;
+        margin: 2rem 1rem;
+        border-radius: 12px;
+    }
+
+    .login-box h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+    }
+
+    .form-control {
+        font-size: 1rem;
+        padding: 0.5rem;
+    }
+
+    .btn-primary {
+        font-size: 1rem;
+        padding: 0.6rem 1.2rem;
+    }
+}
