--- a/front/css/DetailInstallation.css
+++ b/front/css/DetailInstallation.css
@@ -7,7 +7,7 @@ body {
 
 .container-detail {
     max-width: 800px;
-    margin: auto;
+    margin: 2rem auto;
     background: white;
     padding: 2rem;
     border-radius: 1.5rem;
