--- a/front/css/recherche.css
+++ b/front/css/recherche.css
@@ -80,6 +80,7 @@
     padding: 1.5rem;
     border-radius: 16px;
     box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    display: none;
 }
 
 .pagination {
